try to fix flex issues on mobile

--- a/_sass/_layout/_bread.scss
+++ b/_sass/_layout/_bread.scss
@@ -14,7 +14,8 @@
   -ms-flex-wrap: wrap;
   margin-top: 3rem;
   margin-bottom: 3rem;
-
+  -webkit-flex: 1 1 50%;
+  flex: 1 1 50%;
 }
 
 .bagels__wrapper, .breads__wrapper {
@@ -44,7 +45,7 @@
 }
 
 .breads__hero {
-  background-image: url("/gabriels-website/images/gabriels-bread.jpg");
+  background-image: url("../../images/gabriels-bread.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
